Fixed about me content overflowing from background

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ html {
   display: flex;
   max-width: 1000px;
   width: 95%;
-  height: 100%;
   background-color: #3D3D3D;
   justify-content: center;
   margin: auto;
